RESOLVED FIXED143016
Fix designated initializer violations
https://bugs.webkit.org/show_bug.cgi?id=143016
Summary Fix designated initializer violations
Anders Carlsson
Reported 2015-03-24 13:30:16 PDT
Fix designated initializer violations
Attachments
Patch (8.07 KB, patch)
2015-03-24 13:37 PDT, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2015-03-24 13:37:27 PDT
mitz
Comment 2 2015-03-24 13:58:49 PDT
Comment on attachment 249346 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=249346&action=review > Source/WebCore/bindings/objc/DOMObject.mm:-48 > - [self release]; You shouldn’t remove this.
Anders Carlsson
Comment 3 2015-03-24 14:14:29 PDT
(In reply to comment #2) > Comment on attachment 249346 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=249346&action=review > > > Source/WebCore/bindings/objc/DOMObject.mm:-48 > > - [self release]; > > You shouldn’t remove this. This has always been dead code, and once you raise an exception all memory management goes out the door anyway. This just follows the established pattern that other frameworks use (Foundation for example).
Anders Carlsson
Comment 4 2015-03-24 14:18:13 PDT
Note You need to log in before you can comment on or make changes to this bug.