Fix designated initializer violations https://bugs.webkit.org/show_bug.cgi?id=143016 rdar://problem/20268858

Reviewed by Dan Bernstein.

Source/WebCore:

Mark -[DOMObject init] as unavailable.

* bindings/objc/DOMObject.h:
* bindings/objc/DOMObject.mm:
(-[DOMObject init]):

Source/WebKit/mac:

Move -[WebBackForwardList initWithBackForwardList:] to the implementation instead of a category since
nobody calls it outside of WebBackForwardList.mm.

* History/WebBackForwardList.mm:
* History/WebBackForwardListInternal.h:

Source/WebKit2:

Move -[WKProcessPool _initWithConfiguration:] to a class extension so we can make it the designated initializer.

* UIProcess/API/Cocoa/WKProcessPool.mm:
(-[WKProcessPool _initWithConfiguration:]):
* UIProcess/API/Cocoa/WKProcessPoolPrivate.h:

Canonical link: https://commits.webkit.org/161034@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181906 268f45cc-cd09-0410-ab3c-d52691b4dbfc